test/spec_vectors/func/fail/module_50.wat
(module (func $type-return-first-num-vs-num (result i32) (return (i64.const 1)) (return (i32.const 1))))